[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Lobby.gd" type="Script" id=1]
[ext_resource path="res://scripts/TableList.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]
Panel/colors/ = Color( 0.396078, 0.0705882, 0.0705882, 1 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TableList" type="Tree" parent="."]
margin_left = 49.4442
margin_top = 17.9797
margin_right = 974.444
margin_bottom = 574.98
columns = 4
hide_root = true
select_mode = 1
script = ExtResource( 2 )

[node name="LoginOverlay" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -211.7
margin_top = -105.603
margin_right = 157.3
margin_bottom = 161.897
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginSection" type="VBoxContainer" parent="LoginOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -30.0
margin_right = 100.0
margin_bottom = 30.0
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameField" type="LineEdit" parent="LoginOverlay/LoginSection"]
margin_right = 200.0
margin_bottom = 24.0
size_flags_vertical = 3
placeholder_text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="LoginOverlay/LoginSection"]
margin_top = 28.0
margin_right = 200.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLabel" type="Label" parent="LoginOverlay/LoginSection"]
margin_top = 52.0
margin_right = 200.0
margin_bottom = 66.0
custom_colors/font_color = Color( 0.839216, 0, 0, 1 )
[connection signal="item_activated" from="TableList" to="TableList" method="_on_TableList_item_activated"]
[connection signal="item_double_clicked" from="TableList" to="TableList" method="_on_TableList_item_double_clicked"]
[connection signal="text_entered" from="LoginOverlay/LoginSection/UsernameField" to="." method="_on_UsernameField_text_entered"]
[connection signal="pressed" from="LoginOverlay/LoginSection/Button" to="." method="_on_Button_pressed"]
